k8s/crdp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crdp
  namespace: iy-awstest-dev
  labels:
    app: crdp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crdp
  template:
    metadata:
      labels:
        app: crdp
    spec:
      serviceAccountName: crdp-sa
      containers:
        - name: crdp
          image: thalesciphertrust/ciphertrust-restful-data-protection:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
          readinessProbe:
            httpGet:
              path: /v1/ping
              port: 8090
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /v1/ping
              port: 8090
            initialDelaySeconds: 20
            periodSeconds: 10
